--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@ $(document).ready(function () {
 
 
 <p>Starting out the webpage</p>
+<p>A link to some <a href="best_practices.html">standard practices</a></p>
 
 
 
