--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ $(document).ready(function () {
 
 <p>Starting out the webpage</p>
 <p>A link to some <a href="best_practices.html">standard practices</a></p>
-<p>and biometrics SOP <a href="SOP.html">standard practices</a></p>
+<p>and biometrics <a href="SOP.html">SOP</a></p>
 
 
 
