--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ $(document).ready(function () {
 <p>A link to some <a href="best_practices.html">standard practices</a></p>
   <p>git / GitHub training<a href="git.html">git</a></p>
 <p>and biometrics <a href="SOP.html">SOP</a></p>
-<p>Materials for mini-workshop during 2018-09-06 biometrics meeting <a href="<p>and biometrics <a href="SOP.html">SOP</a></p>">Special topics in ggplot2</a></p>
+<p>Materials for mini-workshop during 2018-09-06 biometrics meeting <a href="special_topics_20180906.html">Special topics in ggplot2</a></p>
 
 
 </div>
